// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account View should render Account Correctly 1`] = `
<MyAccountLayoutView
  active="accountOverview"
  mainContent={[Function]}
  navData={
    Array [
      Object {
        "component": "addressBook",
        "displayName": "Address Book",
        "href": "/account?id=addressBook",
        "id": "addressBook",
        "url": "/account/address-book",
      },
    ]
  }
/>
`;

exports[`Account View should render AddressBook Correctly 1`] = `
<MyAccountLayoutView
  active="addressBook"
  mainContent={[Function]}
  navData={
    Array [
      Object {
        "component": "addressBook",
        "displayName": "Address Book",
        "href": "/account?id=addressBook",
        "id": "addressBook",
        "url": "/account/address-book",
      },
    ]
  }
/>
`;
